--- a/JSON Processing/ProductShop/src/main/resources/application.properties
+++ b/JSON Processing/ProductShop/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=ProductShop
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/product_shop?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=NikiGGn07BB!
+spring.datasource.password=""
 
 #JPA Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
